--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "clarifai": "^2.9.1",
     "clarifai-nodejs-grpc": "^8.0.0",
+    "dotenv": "^16.0.3",
     "nodejs": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-parallax-tilt": "^1.7.100",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tsparticles": "^2.8.0",
     "tachyons": "^4.12.0",
     "tsparticles": "^2.8.0",
@@ -24,6 +25,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   },
   "eslintConfig": {
     "extends": [
@@ -44,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "react-error-overlay": "^6.0.9"
   }
 }
